2014-06-02  Sancho Lerena <slerena@artica.es>

	* pandoradb_data.sql: Nice new default colors, it's spring time ! :)

2014-06-02  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* godmode/setup/setup_visuals.php,
	  include/functions_config.php: Added a new config token
	to hold a custom path for the graphviz binaries.

	* include/functions_networkmap.php: Minor fixes on the
	functions "networkmap_create_module_node" and
	"networkmap_open_graph".

	* operation/agentes/networkmap.groups.php,
	  operation/agentes/networkmap.topology.php: Modified to
	support the custom graphviz directory, blanks in paths, etc.

2014-06-02  Ramon Novoa  <rnovoa@artica.es>

	* godmode/setup/license.php: Added to repository. License configuration
	  screen.

2014-06-02  Ramon Novoa  <rnovoa@artica.es>

	* extensions/update_manager/settings.php
	  godmode/menu.php: Moved license configuration from update manager settings
	  to its own screen.

2014-06-02  Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/alerts/configure_alert_template.php,
	godmode/reporting/reporting_builder.item_editor.php,
	godmode/agentes/planned_downtime.editor.php, godmode/setup/news.php,
	include/ajax/module.php, include/functions.php,
	include/functions_ui.php, extensions/insert_data.php,
	operation/netflow/nf_live_view.php,
	operation/reporting/reporting_viewer.php,
	operation/reporting/graph_viewer.php, operation/tree.php,
	operation/agentes/datos_agente.php,
	operation/agentes/estado_monitores.php: fixed the i18n of the
	timepicker.

2014-06-02  Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/reporting/visual_console_builder.editor.js: fixed the
	default height for the visualmap editor.
	
	Incident: #823
	
	* godmode/servers/manage_recontask_form.php: fixed PHP warning.

2014-06-02  Sergio Martin <sergio.martin@artica.es>

	* include/styles/pandora.css
	include/styles/dialog.css
	include/functions_events.php
	operation/agentes/group_view.php
	images/data.png
	images/network.png